--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,5 @@ log = { version = "0.4.21", features = ["std"] }
 quick-xml = { version = "0.31.0", features = ["serde", "serialize"] }
 serde = { version = "1.0.196", features = ["derive"] }
 thiserror = "1.0.57"
-xml_struct = { git = "https://github.com/thunderbird/xml-struct-rs.git", rev = "ace285b5848750064d4f5ad30ddc0c0bff53d8a9", version = "0.1.0" }
+time = { version = "0.3.23", features = ["parsing", "serde"] }
+xml_struct = { git = "https://github.com/thunderbird/xml-struct-rs.git", rev = "0374b50878596a08ef9c9ac2dfcc7325b9c39b83", version = "0.1.0" }
