Place interop in a feature.

--- a/ews/Cargo.toml
+++ b/ews/Cargo.toml
@@ -3,6 +3,9 @@ name = "ews"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+interop = []
+
 [dependencies]
 ews_proc_macros = { path = "../ews_proc_macros" }
 log = { version = "0.4.21", features = ["std"] }
